ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/Area_retrieval_status__c.object-meta.xml
<CustomObject>
    <label>Area_retrieval_status</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Area_retrieval_status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>