ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Affordability__c.field-meta.xml
<CustomField>
    <fullName>Affordability__c</fullName>
    <formula>Flat_price__c / Avg_household_income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How many average annual salaries does an average house cost in this postcode</inlineHelpText>
    <label>Affordability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>