ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Approx_Build_cost__c.field-meta.xml
<CustomField>
    <fullName>Approx_Build_cost__c</fullName>
    <label>Approx Build cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>