ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Approx_ratio__c.field-meta.xml
<CustomField>
    <fullName>Approx_ratio__c</fullName>
    <label>Approx ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>