ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <defaultValue>&#39;gu35 0gj&#39;</defaultValue>
    <label>Area</label>
    <length>99</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>