ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Area_level__c.field-meta.xml
<CustomField>
    <fullName>Area_level__c</fullName>
    <defaultValue>&apos;6_Postcode&apos;</defaultValue>
    <label>Area level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_levels</valueSetName>
    </valueSet>
</CustomField>