ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Area_Level_check__c.field-meta.xml
<CustomField>
    <fullName>Area_Level_check__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Concatenation of Are + Level; this should give a UNIQUE field</inlineHelpText>
    <label>Area+Level (check)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>