ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Average_bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Average_bedrooms__c</fullName>
    <label>Average bedrooms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>