ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Average_price__c.field-meta.xml
<CustomField>
    <fullName>Average_price__c</fullName>
    <label>Average price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>