ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Average_rent__c.field-meta.xml
<CustomField>
    <fullName>Average_rent__c</fullName>
    <label>Average rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>