ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Average_yield__c.field-meta.xml
<CustomField>
    <fullName>Average_yield__c</fullName>
    <label>Average yield</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>