ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Avg_household_income__c.field-meta.xml
<CustomField>
    <fullName>Avg_household_income__c</fullName>
    <label>Avg. household income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>