ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Centrepoint_geo__c.field-meta.xml
<CustomField>
    <fullName>Centrepoint_geo__c</fullName>
    <label>Centrepoint (geo)</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>