ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Crime_rate__c.field-meta.xml
<CustomField>
    <fullName>Crime_rate__c</fullName>
    <label>Crime rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>