ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Degree_educated__c.field-meta.xml
<CustomField>
    <fullName>Degree_educated__c</fullName>
    <label>Degree educated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>