ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/EPC_Data_Frequency__c.field-meta.xml
<CustomField>
    <fullName>EPC_Data_Frequency__c</fullName>
    <label>EPC Data Frequency</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>