ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/EPC_Data_Last_accessed__c.field-meta.xml
<CustomField>
    <fullName>EPC_Data_Last_accessed__c</fullName>
    <label>EPC Data Last accessed</label>
    <type>Date</type>
</CustomField>