ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/EPC_Data_Retrieval_required__c.field-meta.xml
<CustomField>
    <fullName>EPC_Data_Retrieval_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPC data retrieval required</label>
    <type>Checkbox</type>
</CustomField>