ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/EPC_Data_Retrieval_result_buffer__c.field-meta.xml
<CustomField>
    <fullName>EPC_Data_Retrieval_result_buffer__c</fullName>
    <label>EPC Data Retrieval result buffer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>