ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Flat_price__c.field-meta.xml
<CustomField>
    <fullName>Flat_price__c</fullName>
    <label>Flat price</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>