ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Flat_price_local__c.field-meta.xml
<CustomField>
    <fullName>Flat_price_local__c</fullName>
    <label>Flat price local</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>