ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Flat_size__c.field-meta.xml
<CustomField>
    <fullName>Flat_size__c</fullName>
    <label>Flat size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>