ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Flats_sold_1yr_total__c.field-meta.xml
<CustomField>
    <fullName>Flats_sold_1yr_total__c</fullName>
    <label>Flats sold (1yr total)</label>
    <summarizedField>Plot__c.GBP_sqft__c</summarizedField>
    <summaryFilterItems>
        <field>Plot__c.Price_paid_date__c</field>
        <operation>greaterThan</operation>
        <value>8/1/2019</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plot__c.Property_type__c</field>
        <operation>equals</operation>
        <value>Flat-maisonette</value>
    </summaryFilterItems>
    <summaryForeignKey>Plot__c.Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>