ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Flats_sold_local_psqft__c.field-meta.xml
<CustomField>
    <fullName>Flats_sold_local_psqft__c</fullName>
    <label>Flats sold local £sqft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>