ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Flats_sold_psqft__c.field-meta.xml
<CustomField>
    <fullName>Flats_sold_psqft__c</fullName>
    <inlineHelpText>£ per sqft paid for flats over the last 18 months in this and 9 nearest postcodes</inlineHelpText>
    <label>Flats sold £sqft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>