ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/LR_Trans_Data_Frequency_c__c.field-meta.xml
<CustomField>
    <fullName>LR_Trans_Data_Frequency_c__c</fullName>
    <defaultValue>7</defaultValue>
    <label>LR Trans Data Frequency</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>