ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/LR_Trans_Data_Last_accessed__c.field-meta.xml
<CustomField>
    <fullName>LR_Trans_Data_Last_accessed__c</fullName>
    <label>LR Trans Data Last accessed</label>
    <type>Date</type>
</CustomField>