ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/LR_trans_data_retrieval_required__c.field-meta.xml
<CustomField>
    <fullName>LR_trans_data_retrieval_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LR Trans data retrieval required</label>
    <type>Checkbox</type>
</CustomField>