ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/LR_Trans_Data_Retrieval_result_buffer__c.field-meta.xml
<CustomField>
    <fullName>LR_Trans_Data_Retrieval_result_buffer__c</fullName>
    <label>LR Trans Data Retrieval result buffer</label>
    <type>TextArea</type>
</CustomField>