ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Nearest_postcodes__c.field-meta.xml
<CustomField>
    <fullName>Nearest_postcodes__c</fullName>
    <inlineHelpText>Distance in m from the postcode centre points</inlineHelpText>
    <label>Nearest postcodes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>