ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Nearest_postcodes_refreshed__c.field-meta.xml
<CustomField>
    <fullName>Nearest_postcodes_refreshed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked: forces a recalc of the prices sold</inlineHelpText>
    <label>Nearest postcodes refreshed</label>
    <type>Checkbox</type>
</CustomField>