ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Non_flat_size__c.field-meta.xml
<CustomField>
    <fullName>Non_flat_size__c</fullName>
    <label>Non flat size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>