ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Non_flats_sold__c.field-meta.xml
<CustomField>
    <fullName>Non_flats_sold__c</fullName>
    <inlineHelpText>Non-Flats sold in this and 9 nearest postcodes over the last 18 months</inlineHelpText>
    <label>Non-flats sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>