ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Non_flats_sold_psqft__c.field-meta.xml
<CustomField>
    <fullName>Non_flats_sold_psqft__c</fullName>
    <inlineHelpText>£ per sqft paid for non-flats over the last 18 months in this and 9 nearest postcodes</inlineHelpText>
    <label>Non-flats £sqft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>