ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Parent_area__c.field-meta.xml
<CustomField>
    <fullName>Parent_area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent area</label>
    <referenceTo>Area_retrieval_status__c</referenceTo>
    <relationshipLabel>Area_retrieval_status</relationshipLabel>
    <relationshipName>Area_retrieval_status</relationshipName>
    <type>Lookup</type>
</CustomField>