ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/PD_Ask_Data_Frequency__c.field-meta.xml
<CustomField>
    <fullName>PD_Ask_Data_Frequency__c</fullName>
    <defaultValue>7</defaultValue>
    <inlineHelpText>Retrieval frequency in days</inlineHelpText>
    <label>PD Ask Data Frequency</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>