ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/PD_Ask_Data_Last_retrieved__c.field-meta.xml
<CustomField>
    <fullName>PD_Ask_Data_Last_retrieved__c</fullName>
    <label>PD Ask Data Last retrieved</label>
    <type>Date</type>
</CustomField>