ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/PD_ask_data_retrieval_required__c.field-meta.xml
<CustomField>
    <fullName>PD_ask_data_retrieval_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PD ask data retrieval required</label>
    <type>Checkbox</type>
</CustomField>