ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/PD_Ask_Data_Retrieval_result_buffer__c.field-meta.xml
<CustomField>
    <fullName>PD_Ask_Data_Retrieval_result_buffer__c</fullName>
    <label>PD Ask Data Retrieval result buffer</label>
    <type>TextArea</type>
</CustomField>