ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Pdata_land_for_sale_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Pdata_land_for_sale_Frequency__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Pdata land for sale-Frequency</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>