ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Pdata_land_for_sale_Last_accessed__c.field-meta.xml
<CustomField>
    <fullName>Pdata_land_for_sale_Last_accessed__c</fullName>
    <label>Pdata land for sale-Last accessed</label>
    <type>Date</type>
</CustomField>