ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Pdata_land_for_sale_Last_retrieved__c.field-meta.xml
<CustomField>
    <fullName>Pdata_land_for_sale_Last_retrieved__c</fullName>
    <label>Pdata land for sale-Last retrieved</label>
    <type>Date</type>
</CustomField>