ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Pdata_land_for_sale_Region__c.field-meta.xml
<CustomField>
    <fullName>Pdata_land_for_sale_Region__c</fullName>
    <label>Pdata land for sale-Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>east_midlands</fullName>
            </value>
            <value>
                <fullName>east_of_england</fullName>
            </value>
            <value>
                <fullName>greater_london</fullName>
            </value>
            <value>
                <fullName>north_east</fullName>
            </value>
            <value>
                <fullName>north_west</fullName>
            </value>
            <value>
                <fullName>northern_ireland</fullName>
            </value>
            <value>
                <fullName>scotland</fullName>
            </value>
            <value>
                <fullName>south_east</fullName>
            </value>
            <value>
                <fullName>south_west</fullName>
            </value>
            <value>
                <fullName>wales</fullName>
            </value>
            <value>
                <fullName>west_midlands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>