ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Pdata_land_for_sale_Retrieval_required__c.field-meta.xml
<CustomField>
    <fullName>Pdata_land_for_sale_Retrieval_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pdata land for sale-Retrieval required</label>
    <type>Checkbox</type>
</CustomField>