ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Pdata_land_for_sale_Retrieval_result_b__c.field-meta.xml
<CustomField>
    <fullName>Pdata_land_for_sale_Retrieval_result_b__c</fullName>
    <label>Pdata land for sale-Retrieval result buf</label>
    <type>TextArea</type>
</CustomField>