ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Planning_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Planning_Frequency__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Planning-Frequency</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>