ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Planning_Last_accessed__c.field-meta.xml
<CustomField>
    <fullName>Planning_Last_accessed__c</fullName>
    <label>Planning-Last accessed</label>
    <type>Date</type>
</CustomField>