ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Planning_Last_retrieved__c.field-meta.xml
<CustomField>
    <fullName>Planning_Last_retrieved__c</fullName>
    <label>Planning-Last retrieved</label>
    <type>Date</type>
</CustomField>