ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Planning_Retrieval_required__c.field-meta.xml
<CustomField>
    <fullName>Planning_Retrieval_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planning-Retrieval required</label>
    <type>Checkbox</type>
</CustomField>