ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Planning_Retrieval_result_buffer__c.field-meta.xml
<CustomField>
    <fullName>Planning_Retrieval_result_buffer__c</fullName>
    <label>Planning-Retrieval result buffer</label>
    <type>TextArea</type>
</CustomField>