ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <label>Postcode</label>
    <length>19</length>
    <type>Text</type>
</CustomField>