ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Price_paid_for_flats_1yr__c.field-meta.xml
<CustomField>
    <fullName>Price_paid_for_flats_1yr__c</fullName>
    <formula>Flats_sold_1yr_total__c /  Flats_sold_1yr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average £/sqft for all FLATS within this area sold after 1/1/2000</inlineHelpText>
    <label>Price paid for Flats (1yr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>