ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Price_paid_for_non_flats_1yr__c.field-meta.xml
<CustomField>
    <fullName>Price_paid_for_non_flats_1yr__c</fullName>
    <formula>Non_flats_sold_1yr_total__c /  Non_flats_sold_1yr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average £sqft of all related DETACHED plots sold since 1/1/2000</inlineHelpText>
    <label>Price paid for non-Flats (1yr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>