ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Sales_per_month__c.field-meta.xml
<CustomField>
    <fullName>Sales_per_month__c</fullName>
    <label>Sales per month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>