ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Social_grade_AB__c.field-meta.xml
<CustomField>
    <fullName>Social_grade_AB__c</fullName>
    <label>Social grade AB</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>