ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Social_rent__c.field-meta.xml
<CustomField>
    <fullName>Social_rent__c</fullName>
    <label>Social rent</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>