ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/Turnover__c.field-meta.xml
<CustomField>
    <fullName>Turnover__c</fullName>
    <label>Turnover</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>