ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/fields/X5yr_change__c.field-meta.xml
<CustomField>
    <fullName>X5yr_change__c</fullName>
    <label>5yr change</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>