ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/validationRules/Area_is_valid_UK_postcode.validationRule-meta.xml
<ValidationRule>
    <fullName>Area_is_valid_UK_postcode</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
OR(
TEXT(Area_level__c) != &apos;Postcode&apos;,
OR(
ISNULL( Area__c),
REGEX( Area__c, &quot;[a-zA-Z]\\d\\s\\d[a-zA-Z]{2}&quot;),
REGEX( Area__c, &quot;[a-zA-Z]\\d\\d\\s\\d[a-zA-Z]{2}&quot;),
REGEX( Area__c, &quot;[a-zA-Z]{2}\\d\\s\\d[a-zA-Z]{2}&quot;),
REGEX( Area__c, &quot;[a-zA-Z]{2}\\d\\d\\s\\d[a-zA-Z]{2}&quot;),
REGEX( Area__c, &quot;[a-zA-Z]{2}\\d[a-zA-Z]\\s\\d[a-zA-Z]{2}&quot;),
REGEX( Area__c, &quot;[a-zA-Z]\\d[a-zA-Z]\\s\\d[a-zA-Z]{2}&quot;)
)
)
)</errorConditionFormula>
    <errorDisplayField>Area__c</errorDisplayField>
    <errorMessage>Invalid UK postcode entered</errorMessage>
</ValidationRule>