ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pdata_land_for_sale_Retrieval_required__c</columns>
    <columns>Pdata_land_for_sale_Last_retrieved__c</columns>
    <columns>Planning_Retrieval_required__c</columns>
    <columns>Planning_Last_retrieved__c</columns>
    <columns>PD_Ask_Data_Last_retrieved__c</columns>
    <columns>LR_Trans_Data_Last_retrieved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>