ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Parent_area__c</columns>
    <columns>Affordability_image__c</columns>
    <columns>Affordability__c</columns>
    <columns>Flat_price__c</columns>
    <columns>Avg_household_income__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>