ezyplot-x1/force-app/main/default/objects/Area_retrieval_status__c/listViews/Postcode_level.listView-meta.xml
<ListView>
    <fullName>Postcode_level</fullName>
    <columns>NAME</columns>
    <columns>Area_level__c</columns>
    <columns>Area__c</columns>
    <columns>Parent_area__c</columns>
    <columns>LR_Trans_Data_Last_retrieved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Area_level__c</field>
        <operation>equals</operation>
        <value>Postcode</value>
    </filters>
    <label>Postcode level</label>
</ListView>